[package]
name = "petemc"
version = "0.1.0"
edition = "2021"
description = "A server monitoring bot for a Purdue Minecraft server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
lazy_static = "1.4.0"
microkv = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
async-minecraft-ping = "0.8.0"